--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@
   <body ng-app="app" animation="slide-left-right-ios7">
   <div>
   <div>
-    <ion-nav-bar class="bar-royal">
+    <ion-nav-bar class="bar-energized">
       <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
